--- a/index.html
+++ b/index.html
@@ -29,11 +29,36 @@
 
 <!-- body -->
 
-<body>
+<body class="mulish">
 
     <!-- header section -->
 
-    <header>
+    <header class="mr-32 ml-32">
+
+        <!-- nav bar -->
+
+        <div class="navbar bg-base-100">
+            <div class="navbar-start">
+                <div>
+                    <h1 class="text-4xl font-extrabold">ReTro</h1>
+                </div>
+            </div>
+            <div class="navbar-end">
+                <button class="btn btn-ghost btn-circle">
+                    <i class="fa-solid fa-house"></i>
+                </button>
+                <button class="btn btn-ghost btn-circle">
+                    <i class="fa-solid fa-pen"></i>
+                </button>
+                <button class="btn btn-ghost btn-circle">
+                    <i class="fa-solid fa-user-plus"></i>
+                </button>
+                <button class="btn btn-ghost btn-circle">
+                    <i class="fa-regular fa-flag"></i>
+                </button>
+                <a class="btn bg-[#797DFC] text-white">Sign In</a>
+            </div>
+        </div>
 
     </header>
 
