add responsive nav

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
     <!-- header section -->
 
-    <header class="mr-32 ml-32">
+    <header class="lg:mr-32 lg:ml-32">
 
         <!-- nav bar -->
 
         <div class="navbar bg-base-100">
             <div class="navbar-start">
                 <div>
-                    <h1 class="text-4xl font-extrabold">ReTro</h1>
+                    <h1 class="lg:text-4xl text-2xl lg:font-extrabold font-semibold">ReTro</h1>
                 </div>
             </div>
             <div class="navbar-end">
