--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
     <!-- header section -->
 
-    <header class="lg:mr-32 lg:ml-32">
+    <header class="lg:mr-32 lg:ml-32 ml-4 mr-4">
 
         <!-- nav bar -->
 
-        <div class="navbar bg-base-100">
+        <div class="navbar bg-base-100 mt-5">
             <div class="navbar-start">
                 <div>
                     <h1 class="lg:text-4xl text-2xl lg:font-extrabold font-semibold">ReTro</h1>
@@ -62,15 +62,52 @@
 
         <!-- hero -->
 
-        <div class="hero min-h-screen"
-            style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
-            <div class="hero-overlay bg-opacity-60"></div>
-            <div class="hero-content text-center text-neutral-content">
-                <div class="max-w-md">
-                    <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-                    <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
-                        exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                    <button class="btn btn-primary">Get Started</button>
+        <div class="hero min-h-96 bg-[#12132D] mt-5 rounded-2xl" style="background-image: url(images/bgbanner.png)">
+            <div class="flex lg:flex-row flex-col justify-between lg:gap-40 gap-5">
+                <div class="hero-content text-center text-neutral-content">
+                    <div class="max-w-md">
+                        <h1 class="mb-5 lg:text-5xl text-3xl font-extrabold text-white">Welcome to the <br> <span
+                                class="text-[#797DFCFF]">RetRo</span> Forum</h1>
+                        <p class="mb-5">Share your favorite opinion and win and wp <br> forum coffee mug!</p>
+                        <label class="input input-bordered flex items-center gap-2">
+                            <input type="text" class="grow" placeholder="Search here anything" />
+                            <span class="badge badge-info">Search</span>
+                        </label>
+                    </div>
+                </div>
+                <div class="text-[#12132DCC] bg-white flex flex-col justify-evenly items-center lg:pr-4 lg:pl-4 rounded-2xl pt-5 pb-5 lg:pt-0 lg:pb-0 mb-8 lg:mb-0">
+                    <div class="flex justify-between gap-5">
+                        <p>
+                            Registered Users
+                        </p>
+                        <p>
+                            01
+                        </p>
+                    </div>
+                    <div class="flex justify-between gap-5">
+                        <p>
+                            Forum
+                        </p>
+                        <p>
+                            05
+                        </p>
+                    </div>
+                    <div class="flex justify-between gap-5">
+                        <p>
+                            Topics
+                        </p>
+                        <p>
+                            01
+                        </p>
+                    </div>
+                    <div class="flex justify-between gap-5">
+                        <p>
+                            Replies
+                        </p>
+                        <p>
+                            01
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
